[package]
name = "esp32c3-uart-communication"
version = "0.1.0"
authors = ["wooker <zakhar.semenov@nu.edu.kz>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
esp-backtrace = { version = "0.14.2", features = [
    "esp32c3",
    "exception-handler",
    "panic-handler",
    "println",
] }
esp-hal = { version = "0.21.0", features = [ "esp32c3" ] }
esp-hal-embassy     = { version = "0.4.0", features = [ "esp32c3"] }
esp-println = { version = "0.12.0", features = ["esp32c3", "log"] }
log = { version = "0.4.22" }

embassy-executor    = { version = "0.6.0", features = ["task-arena-size-12288"] }
embassy-futures     = "0.1.1"
embassy-net = { version = "0.4.0", features = [ "tcp", "udp", "dhcpv4", "medium-ethernet"] }
embassy-sync        = "0.6.0"
embassy-time        = "0.3.2"
embedded-io         = { version = "0.6.1", default-features = false }
embedded-io-async   = "0.6.1"
static_cell         = { version = "2.1.0", features = ["nightly"] }
[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 's'
overflow-checks = false
